<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_cycle"
            android:title="@string/guidelines" />

        <item

            android:id="@+id/nav_lang"
            android:title="@string/select_language"
            android:actionLayout="@layout/spinner_layout"
            app:showAsAction="always"/>


    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">

            <menu>

                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_profile"
                        android:title="@string/profile" />

                    <item

                        android:id="@+id/nav_logout"
                        android:title="@string/logout" />

                </group>

            </menu>

        </item>

    </group>

        <item android:title="@string/communicate">

            <menu>

                <item

                    android:id="@+id/nav_faq"
                    android:title="@string/faq" />

                <item

                    android:id="@+id/feedback"
                    android:title="@string/feedback" />

            </menu>

        </item>


</menu>